plays/file/python-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: py-service
spec:
  selector:
    app: python-app
  type: NodePort
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 32000
