plays/file/python-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - https:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py-service
            port:
              number: 32000
